--- a/exo 1/exo1.html
+++ b/exo 1/exo1.html
@@ -11,8 +11,11 @@
 
 	<ul id="liste-commissions">
 		<li>1kg de farine</li>
-		<li>un pack de lait</li>
+		<li id="test">un pack de lait</li>
 	</ul>
+
+	<input type="text" id="champ">
+	<button type="submit" id="valide">Valider</button>
 
 </body>
 </html>
